--- a/minesweeper/src/index.css
+++ b/minesweeper/src/index.css
@@ -18,7 +18,7 @@ ol, ul {
 }
 
 .square {
-    background: #ddd;
+    background: #bbb;
     border: 2px outset black;
     float: left;
     font-size: 12px;
